# rules_jest

./: .bazelrc  MODULE.bazel  package.json  pnpm-lock.yaml
example/: package.json
example/ts/: BUILD.bazel  package.json  tsconfig.json
example/ts/src/: index.test.ts
